; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_hal_h4.c_event_uart_has_bytes.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_hal_h4.c_event_uart_has_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FIXED_QUEUE_MAX_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @event_uart_has_bytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @event_uart_has_bytes(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @fixed_queue_is_empty(i32* %5)
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  br i1 %8, label %9, label %15

9:                                                ; preds = %4
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @FIXED_QUEUE_MAX_TIMEOUT, align 4
  %12 = call i32* @fixed_queue_dequeue(i32* %10, i32 %11)
  store i32* %12, i32** %3, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @hci_hal_h4_hdl_rx_packet(i32* %13)
  br label %4

15:                                               ; preds = %4
  ret void
}

declare dso_local i32 @fixed_queue_is_empty(i32*) #1

declare dso_local i32* @fixed_queue_dequeue(i32*, i32) #1

declare dso_local i32 @hci_hal_h4_hdl_rx_packet(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
